feat: addition the legends

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@
     --yellow: #FFB612;
     --green: #2FC022;
     --red: #dc0a17;
-    --light-text: #939393;
-    --medium-text: ;
+    --light-text: #e5e5e5;
+    --medium-text: #939393;
 }
 
 * {
