--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-header></app-header>
   <app-forms (submitEvent)="onSubmit()"></app-forms>
   <app-cards-list *ngIf="(showList | async)" [unitsList]="unitsList"></app-cards-list>
+  <app-legend></app-legend>
 </div>
