--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -11,15 +11,16 @@
   margin: 0 auto;
 
   border-radius: 18px;
+
   border: 2px solid var(--light-text);
-  box-shadow: 0px 5px 5px 0px var(--light-text);
-  -webkit-box-shadow: 0px 5px 5px 0px var(--light-text);
-  -moz-box-shadow: 0px 5px 5px 0px var(--light-text);
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(51, 51, 51, 0.15);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(51, 51, 51, 0.15);
+  box-shadow: 1px 1px 1px 1px rgba(51, 51, 51, 0.15);
 }
 
 .form-group .form-icon {
   font-size: 14px;
-  color: var(--light-text);
+  color: var(--medium-text);
   display: flex;
   gap: 8px;
   align-items: center;
@@ -32,7 +33,7 @@
 
 .form-group h3 {
   font-size: 24px;
-  color: var(--light-text);
+  color: var(--medium-text);
   font-weight: 300;
   margin-top: 32px;
   margin-bottom: 8px;
