--- a/src/app/components/legend/legend.component.scss
+++ b/src/app/components/legend/legend.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
 
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0,0,0,0.1);
 
   max-width: 80%;
   width: 100%;
@@ -12,31 +12,50 @@
   padding: 24px 12px;
 
   border-radius: 4px;
+  gap: 24px;
 }
 
 .legend .legend-item {
   display: flex;
   flex-direction: column;
+  gap: 8px;
 }
 
 .legend .legend-item h4 {
-    text-align: center;
+  text-align: center;
 }
 
-.legend .legend-item legend-images {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.legend .legend-item .legend-images {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    gap: 12px;
+  gap: 12px;
 }
 
-.legend .legend-item legend-images img {
-    width: 100px;
+.legend .legend-item .legend-images .legend-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-@media (min-width: 768px) {
+.legend .legend-item .legend-images img {
+  width: 100px;
+}
+
+@media (min-width: 1120px) {
   .legend {
     flex-direction: row;
+  }
+
+  .legend .legend-item .legend-images img {
+    width: 50px;
+  }
+}
+
+@media (min-width: 1380px) {
+  .legend .legend-item .legend-images img {
+    width: 100px;
   }
 }
